# project-vega

./: .gitignore  LICENSE  README.md
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/src/: README.md  catalog_service.rs  commands.rs  domain.rs  events.rs  feed.rs  git_commands.rs  lib.rs  main.rs  monitor.rs  project_planner.rs  projection.rs  semantic_diff.rs  session.rs  store.rs  terminal_service.rs  view_model.rs  workspace_service.rs  worktree_inspector.rs
apps/desktop/src-tauri/tests/: README.md
apps/desktop/src/app/: README.md
apps/desktop/src/components/: active-workspaces-screen.tsx  add-resource-dialog.tsx  agent-view.tsx  app-shell.tsx  context-sidebar.tsx  diff-view.tsx  feed-screen.tsx  git-replay-editor.tsx  git-replay-panel.tsx  message-bubble.tsx  message-input.tsx  new-project-dialog.tsx  new-task-dialog.tsx  project-board.tsx  project-rail.tsx  project-sidebar.tsx  (+13 more)
crates/: README.md
crates/artifacts/: README.md
crates/catalog/: README.md
crates/core/: README.md
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/integrations/: README.md
crates/projection/: README.md
crates/runs/: README.md
crates/sessions/: README.md
crates/storage/: README.md
crates/workspace/: README.md
docs/: README.md  architecture.md  implementation-plan.md  milestone-01-harness.md  milestone-02-projects-workspaces.md  milestone-v0-plan.md  north-star.md  philosophy.md
(+23 files in other folders)
